# deep-learning-portfolio

./: .gitignore  LICENSE  README.md
fruit-quality/: README.md  requirements.txt  setup.sh
fruit-quality/data/sample_images/: .gitkeep
fruit-quality/scripts/: evaluate.py  inference.py  train_model.py  utils.py
model-comparison/: ANALYSIS.md  NOTEBOOKS.md  README.md  comparison_results.json  requirements.txt
yolos-cpp/: CMakeLists.txt  DEPENDENCIES.md  README.md  build.sh
yolos-cpp/include/: YOLO8.hpp
yolos-cpp/src/: camera_inference.cpp  image_inference.cpp  video_inference.cpp
